@@ -1,3 +1,12 @@
+2020-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	balsa-mblist: Connect to the "pressed" signal of a
+	GtkGestureMultiPress instead of the "button-press-event" widget
+	signal.
+
+	* src/balsa-mblist.c (bmbl_gesture_pressed_cb), (bmbl_do_popup),
+	(balsa_mblist_default_signal_bindings):
+
 2020-05-31  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	balsa-index: Connect to the "pressed" signal of a
